--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,15 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended", "plugin:cypress/recommended"],
-  "plugins": ["better-styled-components", "prettier", "prettier", "cypress"],
-  "rules": {
-    "better-styled-components/sort-declarations-alphabetically": 2,
-    "prettier/prettier": ["error", {}, { "usePrettierrc": true }]
-  }
+  "extends": "universe/native",
+  "overrides": [
+    {
+      "files": [
+        "*.ts",
+        "*.tsx",
+        "*.d.ts"
+      ],
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      }
+    }
+  ]
 }
